downloaded pdf files

--- a/CENECO/scrape_CENECO.ipynb
+++ b/CENECO/scrape_CENECO.ipynb
@@ -86,42 +86,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Download button not found for january-2020. Stopping the loop.\n"
-     ]
-    }
-   ],
    "source": [
-    "import os\n",
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.chrome.service import Service\n",
-    "from selenium.webdriver.chrome.options import Options\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from selenium.common.exceptions import NoSuchElementException, TimeoutException\n",
-    "from datetime import datetime\n",
-    "\n",
-    "options = webdriver.ChromeOptions()\n",
-    "options.add_argument('--headless')  # Run headless Chrome (no GUI)\n",
-    "options.add_argument('--no-sandbox')\n",
-    "options.add_argument('--disable-dev-shm-usage')\n",
-    "options.add_argument('--disable-gpu')\n",
-    "options.add_argument('--window-size=1920x1080')\n",
-    "\n",
-    "driver = webdriver.Chrome(options=options)\n",
-    "\n",
-    "# Create a folder to store the downloads\n",
-    "download_folder = \"pdf downloads\"\n",
-    "os.makedirs(download_folder, exist_ok=True)\n",
-    "\n"
+    "Download the source code for the webpage of a single file."
    ]
   },
   {
@@ -163,6 +131,194 @@
     "    print(\"Source code downloaded successfully!\")\n",
     "else:\n",
     "    print(f\"Failed to retrieve the page. Status code: {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: pdf downloads/January-2020.pdf\n",
+      "Downloaded: pdf downloads/February-2020.pdf\n",
+      "Downloaded: pdf downloads/March-2020.pdf\n",
+      "Downloaded: pdf downloads/April-2020.pdf\n",
+      "Downloaded: pdf downloads/May-2020.pdf\n",
+      "Downloaded: pdf downloads/June-2020.pdf\n",
+      "Downloaded: pdf downloads/July-2020.pdf\n",
+      "Downloaded: pdf downloads/August-2020.pdf\n",
+      "Downloaded: pdf downloads/September-2020.pdf\n",
+      "Downloaded: pdf downloads/October-2020.pdf\n",
+      "Downloaded: pdf downloads/November-2020.pdf\n",
+      "Downloaded: pdf downloads/December-2020.pdf\n",
+      "Downloaded: pdf downloads/January-2021-rotated-1.pdf\n",
+      "Downloaded: pdf downloads/February-2021-rotated-1.pdf\n",
+      "Downloaded: pdf downloads/Generation-Charge-for-March-2021-rotated-1.pdf\n",
+      "Downloaded: pdf downloads/GENERATION-CHARGE-JUNE-2021-1.pdf\n",
+      "Downloaded: pdf downloads/Comp.-of-Gen.-Charge-Nov.-2021.pdf\n",
+      "Downloaded: pdf downloads/Generation-Charge-December-2021.pdf\n",
+      "Downloaded: pdf downloads/Generation-Charge-January-2022.pdf\n",
+      "Downloaded: pdf downloads/GR-JAN.pdf\n",
+      "Downloaded: pdf downloads/GR-FEB.pdf\n",
+      "Downloaded: pdf downloads/GR-Mar.pdf\n",
+      "Downloaded: pdf downloads/GR-APR.pdf\n",
+      "Downloaded: pdf downloads/GR-MAY.pdf\n",
+      "Downloaded: pdf downloads/GR-July.pdf\n",
+      "Downloaded: pdf downloads/CENECO-Generation-Charge-Aug-2022.pdf\n",
+      "Downloaded: pdf downloads/GR-SEPTEMBER-2022.pdf\n",
+      "Downloaded: pdf downloads/GR-OCT-2022.pdf\n",
+      "Downloaded: pdf downloads/CENECO-GR-NOV-2022.pdf\n",
+      "Downloaded: pdf downloads/Generation-Charge-December-2022_compressed.pdf\n",
+      "Downloaded: pdf downloads/Generation-Charges-January-2023_compressed.pdf\n",
+      "Downloaded: pdf downloads/Generation-Rate-February-.pdf\n",
+      "Downloaded: pdf downloads/Generation-Charge-March-2023.pdf\n",
+      "Downloaded: pdf downloads/Generation-Rate-for-April-2023.pdf\n",
+      "Downloaded: pdf downloads/Generation-Rate-for-May-2023.pdf\n",
+      "Downloaded: pdf downloads/Generation-charge-June-2023.pdf\n",
+      "Downloaded: pdf downloads/Generation-charge-July-2023.pdf\n",
+      "Downloaded: pdf downloads/gr-aug2023.pdf\n",
+      "Downloaded: pdf downloads/Generation-Charge-September-2023_compressed.pdf\n",
+      "Downloaded: pdf downloads/GR-OCTOBER-2023_compressed.pdf\n",
+      "Downloaded: pdf downloads/Generation-Mix-November-2023_website-posting_compressed.pdf\n",
+      "Downloaded: pdf downloads/Generation-Rates-December-2023_compressed.pdf\n",
+      "HTTPError for URL https://www.ceneco.ph/generation-rate/january-2024: 404 Client Error: Not Found for url: https://www.ceneco.ph/generation-rate/january-2024\n",
+      "Found PDF with misspelling for January 2024.\n",
+      "Downloaded: pdf downloads/ceneco-ceneration-rate-jan-2024.pdf\n",
+      "Downloaded: pdf downloads/February-2024-Generation-Charge_compressed.pdf\n",
+      "Downloaded: pdf downloads/Generation-Rates-March-2024.pdf\n",
+      "Downloaded: pdf downloads/Generation-Mix-_-April-2024.pdf\n",
+      "Downloaded: pdf downloads/Gen-Rate-May-2024_compressed.pdf\n",
+      "Downloaded: pdf downloads/June-2024-Generation-Rate-for-CENECO-website-posting.pdf\n",
+      "Downloaded: pdf downloads/July-2024-Generation-Rate.pdf\n",
+      "HTTPError for URL https://www.ceneco.ph/generation-rate/august-2024: 404 Client Error: Not Found for url: https://www.ceneco.ph/generation-rate/august-2024\n",
+      "No valid PDF found for August-2024 or the next 5 months. Ending the loop.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import os\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Create the folder for downloads if it doesn't exist\n",
+    "download_folder = \"pdf downloads\"\n",
+    "if not os.path.exists(download_folder):\n",
+    "    os.makedirs(download_folder)\n",
+    "\n",
+    "# Base URL format\n",
+    "base_url = \"https://www.ceneco.ph/generation-rate/{}-{}\"\n",
+    "\n",
+    "# Month and year to start from\n",
+    "start_date = datetime(2020, 1, 1)\n",
+    "end_date = datetime.today()\n",
+    "\n",
+    "# Headers to mimic a real browser\n",
+    "headers = {\n",
+    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\",\n",
+    "    \"Accept-Language\": \"en-US,en;q=0.9\",\n",
+    "    \"Accept-Encoding\": \"gzip, deflate, br\",\n",
+    "    \"Accept\": \"text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8\",\n",
+    "    \"Connection\": \"keep-alive\",\n",
+    "}\n",
+    "\n",
+    "# Function to download PDF from a URL\n",
+    "def download_pdf(pdf_url):\n",
+    "    pdf_response = requests.get(pdf_url, headers=headers)\n",
+    "    pdf_response.raise_for_status()\n",
+    "    file_name = os.path.join(download_folder, pdf_url.split('/')[-1])\n",
+    "    with open(file_name, 'wb') as file:\n",
+    "        file.write(pdf_response.content)\n",
+    "    print(f\"Downloaded: {file_name}\")\n",
+    "\n",
+    "# Function to check for PDFs on a given URL\n",
+    "def check_for_pdfs(url):\n",
+    "    try:\n",
+    "        response = requests.get(url, headers=headers)\n",
+    "        response.raise_for_status()\n",
+    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "        link_tags = soup.find_all('a', href=True)\n",
+    "        pdf_urls = []\n",
+    "\n",
+    "        for link_tag in link_tags:\n",
+    "            href = link_tag['href']\n",
+    "            if \".pdf\" in href:\n",
+    "                pdf_url = href.split('file=')[1].split('&')[0]\n",
+    "                pdf_urls.append(pdf_url)\n",
+    "\n",
+    "        return pdf_urls\n",
+    "\n",
+    "    except requests.exceptions.HTTPError as e:\n",
+    "        print(f\"HTTPError for URL {url}: {e}\")\n",
+    "        return []\n",
+    "\n",
+    "# Loop through the months and years\n",
+    "current_date = start_date\n",
+    "\n",
+    "while current_date <= end_date:\n",
+    "    # Format the month and year for the URL\n",
+    "    month = current_date.strftime(\"%B\").lower()  # e.g., 'january'\n",
+    "    year = current_date.strftime(\"%Y\")  # e.g., '2020'\n",
+    "    \n",
+    "    # Generate the URL\n",
+    "    url = base_url.format(month, year)\n",
+    "    \n",
+    "    # Check for PDFs on the correct URL\n",
+    "    pdf_urls = check_for_pdfs(url)\n",
+    "    \n",
+    "    if not pdf_urls and month == 'january':\n",
+    "        # Handle the specific misspelling for January\n",
+    "        typo_url = base_url.format('janauary', year)\n",
+    "        pdf_urls = check_for_pdfs(typo_url)\n",
+    "        if pdf_urls:\n",
+    "            print(f\"Found PDF with misspelling for January {year}.\")\n",
+    "    \n",
+    "    if pdf_urls:\n",
+    "        for pdf_url in pdf_urls:\n",
+    "            download_pdf(pdf_url)\n",
+    "        # Move to the next month\n",
+    "        current_date = current_date.replace(day=28) + timedelta(days=4)\n",
+    "        current_date = current_date.replace(day=1)\n",
+    "    else:\n",
+    "        # Check the next 5 months\n",
+    "        has_valid_pdf = False\n",
+    "        for _ in range(5):\n",
+    "            current_date = current_date.replace(day=28) + timedelta(days=4)\n",
+    "            current_date = current_date.replace(day=1)\n",
+    "            if current_date > end_date:\n",
+    "                break\n",
+    "                \n",
+    "            next_month = current_date.strftime(\"%B\").lower()\n",
+    "            next_year = current_date.strftime(\"%Y\")\n",
+    "            next_url = base_url.format(next_month, next_year)\n",
+    "            \n",
+    "            next_pdf_urls = check_for_pdfs(next_url)\n",
+    "            if next_pdf_urls:\n",
+    "                has_valid_pdf = True\n",
+    "                break\n",
+    "        \n",
+    "        if not has_valid_pdf:\n",
+    "            print(f\"No valid PDF found for {month.capitalize()}-{year} or the next 5 months. Ending the loop.\")\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: April and May 2021 are both images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check which files are actually machine readable by trying to pass them through tabula"
    ]
   },
   {
