added future direction

--- a/CENECO/scrape_CENECO.ipynb
+++ b/CENECO/scrape_CENECO.ipynb
@@ -3340,13 +3340,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
     "with pd.ExcelWriter(\"Historical_CENECO_GC_Breakdown.xlsx\", engine='openpyxl') as writer:\n",
     "    big_df.to_excel(writer, sheet_name='Historical GC', index=False)\n",
     "    supplier_df.to_excel(writer, sheet_name='Supplier IDs', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Future Direction**\n",
+    "\n",
+    "Process files with NaN Generation Charge separately."
    ]
   },
   {
