downloaded iselco's webpage source code

--- a/ISELCO I/scrape_ISELCO_I.ipynb
+++ b/ISELCO I/scrape_ISELCO_I.ipynb
@@ -100,10 +100,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Webpage source code downloaded and saved as billing_rates_page.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://iselcouno.com/services/billing-rates\"\n",
+    "\n",
+    "# Send a GET request to the webpage\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "# Check if the request was successful (status code 200)\n",
+    "if response.status_code == 200:\n",
+    "    # Get the content of the webpage\n",
+    "    html_content = response.text\n",
+    "\n",
+    "    # Save the content to a file\n",
+    "    with open(\"iselco_webpage.html\", \"w\", encoding=\"utf-8\") as file:\n",
+    "        file.write(html_content)\n",
+    "    print(\"Webpage source code downloaded and saved as billing_rates_page.html\")\n",
+    "else:\n",
+    "    print(f\"Failed to retrieve the webpage. Status code: {response.status_code}\")"
+   ]
   },
   {
    "cell_type": "markdown",
