--- a/LEYECO IV/scrape_LEYECO_IV.ipynb
+++ b/LEYECO IV/scrape_LEYECO_IV.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "url = \"https://www.leyecoiv.com/rates/\"\n",
+    "url = \"https://www.leyecoiv.com/rates/breakdown-of-generation-charges/\"\n",
     "\n",
     "# Send a GET request to the webpage\n",
     "response = requests.get(url)\n",
@@ -130,6 +130,192 @@
     "    print(\"Webpage source code downloaded and saved as leyeco_iv_webpage.html\")\n",
     "else:\n",
     "    print(f\"Failed to retrieve the webpage. Status code: {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.leyecoiv.com/2024/01/25/january-2024/\n",
+      "https://www.leyecoiv.com/2024/01/25/january-2024/\n",
+      "https://www.leyecoiv.com/2024/02/23/february-2024/\n",
+      "https://www.leyecoiv.com/2024/02/23/february-2024/\n",
+      "https://www.leyecoiv.com/2024/03/25/march-2024/\n",
+      "https://www.leyecoiv.com/2024/03/25/march-2024/\n",
+      "https://www.leyecoiv.com/2024/04/24/april-2024/\n",
+      "https://www.leyecoiv.com/2024/04/24/april-2024/\n",
+      "https://www.leyecoiv.com/2024/05/21/may-2024/\n",
+      "https://www.leyecoiv.com/2024/05/21/may-2024/\n",
+      "https://www.leyecoiv.com/2024/06/24/june-2024/\n",
+      "https://www.leyecoiv.com/2024/06/24/june-2024/\n",
+      "https://www.leyecoiv.com/2024/07/24/july-2024/\n",
+      "https://www.leyecoiv.com/2024/07/24/july-2024/\n",
+      "https://www.leyecoiv.com/2023/01/26/january-2023/\n",
+      "https://www.leyecoiv.com/2023/01/26/january-2023/\n",
+      "https://www.leyecoiv.com/2023/02/15/february-2023/\n",
+      "https://www.leyecoiv.com/2023/02/15/february-2023/\n",
+      "https://www.leyecoiv.com/2023/03/23/march-2023/\n",
+      "https://www.leyecoiv.com/2023/03/23/march-2023/\n",
+      "https://www.leyecoiv.com/2023/04/24/april-2023/\n",
+      "https://www.leyecoiv.com/2023/04/24/april-2023/\n",
+      "https://www.leyecoiv.com/2023/05/24/may-2023/\n",
+      "https://www.leyecoiv.com/2023/05/24/may-2023/\n",
+      "https://www.leyecoiv.com/2023/06/19/june-2023/\n",
+      "https://www.leyecoiv.com/2023/06/19/june-2023/\n",
+      "https://www.leyecoiv.com/2023/07/18/july-2023/\n",
+      "https://www.leyecoiv.com/2023/07/18/july-2023/\n",
+      "https://www.leyecoiv.com/2023/08/22/august-2023/\n",
+      "https://www.leyecoiv.com/2023/08/22/august-2023/\n",
+      "https://www.leyecoiv.com/2023/09/18/september-2023/\n",
+      "https://www.leyecoiv.com/2023/09/18/september-2023/\n",
+      "https://www.leyecoiv.com/2023/10/25/october-2023/\n",
+      "https://www.leyecoiv.com/2023/10/25/october-2023/\n",
+      "https://www.leyecoiv.com/2023/11/20/november-2023/\n",
+      "https://www.leyecoiv.com/2023/11/20/november-2023/\n",
+      "https://www.leyecoiv.com/2023/12/18/december-2023/\n",
+      "https://www.leyecoiv.com/2023/12/18/december-2023/\n",
+      "https://www.leyecoiv.com/2022/08/19/january-2022/\n",
+      "https://www.leyecoiv.com/2022/08/19/january-2022/\n",
+      "https://www.leyecoiv.com/2022/08/31/february-2022/\n",
+      "https://www.leyecoiv.com/2022/08/31/february-2022/\n",
+      "https://www.leyecoiv.com/2022/08/31/march-2022/\n",
+      "https://www.leyecoiv.com/2022/08/31/march-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/april-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/april-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/may-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/may-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/june-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/june-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/july-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/july-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/august-2022/\n",
+      "https://www.leyecoiv.com/2022/09/01/august-2022/\n",
+      "https://www.leyecoiv.com/2022/09/19/september-2022/\n",
+      "https://www.leyecoiv.com/2022/09/19/september-2022/\n",
+      "https://www.leyecoiv.com/2022/10/18/october-2022/\n",
+      "https://www.leyecoiv.com/2022/10/18/october-2022/\n",
+      "https://www.leyecoiv.com/2022/11/20/november-2022/\n",
+      "https://www.leyecoiv.com/2022/11/20/november-2022/\n",
+      "https://www.leyecoiv.com/2022/12/20/december-2022/\n",
+      "https://www.leyecoiv.com/2022/12/20/december-2022/\n",
+      "https://www.leyecoiv.com/2021/01/10/january-2021/\n",
+      "https://www.leyecoiv.com/2021/01/10/january-2021/\n",
+      "https://www.leyecoiv.com/2021/02/11/february-2021/\n",
+      "https://www.leyecoiv.com/2021/02/11/february-2021/\n",
+      "https://www.leyecoiv.com/2021/03/11/march-2021/\n",
+      "https://www.leyecoiv.com/2021/03/11/march-2021/\n",
+      "https://www.leyecoiv.com/2021/04/11/april-2021/\n",
+      "https://www.leyecoiv.com/2021/04/11/april-2021/\n",
+      "https://www.leyecoiv.com/2021/05/11/may-2021/\n",
+      "https://www.leyecoiv.com/2021/05/11/may-2021/\n",
+      "https://www.leyecoiv.com/2021/06/11/june-2021/\n",
+      "https://www.leyecoiv.com/2021/06/11/june-2021/\n",
+      "https://www.leyecoiv.com/2021/07/11/july-2021/\n",
+      "https://www.leyecoiv.com/2021/07/11/july-2021/\n",
+      "https://www.leyecoiv.com/2021/08/11/august-2021/\n",
+      "https://www.leyecoiv.com/2021/08/11/august-2021/\n",
+      "https://www.leyecoiv.com/2021/09/11/september-2021/\n",
+      "https://www.leyecoiv.com/2021/09/11/september-2021/\n",
+      "https://www.leyecoiv.com/2021/10/11/october-2021/\n",
+      "https://www.leyecoiv.com/2021/10/11/october-2021/\n",
+      "https://www.leyecoiv.com/2021/11/11/november-2021/\n",
+      "https://www.leyecoiv.com/2021/11/11/november-2021/\n",
+      "https://www.leyecoiv.com/2021/12/11/december-2021/\n",
+      "https://www.leyecoiv.com/2021/12/11/december-2021/\n",
+      "https://www.leyecoiv.com/2020/01/10/january-2020/\n",
+      "https://www.leyecoiv.com/2020/01/10/january-2020/\n",
+      "https://www.leyecoiv.com/2020/02/10/february-2020/\n",
+      "https://www.leyecoiv.com/2020/02/10/february-2020/\n",
+      "https://www.leyecoiv.com/2020/03/10/march-2020/\n",
+      "https://www.leyecoiv.com/2020/03/10/march-2020/\n",
+      "https://www.leyecoiv.com/2020/04/10/april-2020/\n",
+      "https://www.leyecoiv.com/2020/04/10/april-2020/\n",
+      "https://www.leyecoiv.com/2020/05/10/may-2020/\n",
+      "https://www.leyecoiv.com/2020/05/10/may-2020/\n",
+      "https://www.leyecoiv.com/2020/06/10/june-2020/\n",
+      "https://www.leyecoiv.com/2020/06/10/june-2020/\n",
+      "https://www.leyecoiv.com/2020/07/10/july-2020/\n",
+      "https://www.leyecoiv.com/2020/07/10/july-2020/\n",
+      "https://www.leyecoiv.com/2020/08/10/august-2020/\n",
+      "https://www.leyecoiv.com/2020/08/10/august-2020/\n",
+      "https://www.leyecoiv.com/2020/09/10/september-2020/\n",
+      "https://www.leyecoiv.com/2020/09/10/september-2020/\n",
+      "https://www.leyecoiv.com/2020/10/10/october-2020/\n",
+      "https://www.leyecoiv.com/2020/10/10/october-2020/\n",
+      "https://www.leyecoiv.com/2020/11/10/november-2020/\n",
+      "https://www.leyecoiv.com/2020/11/10/november-2020/\n",
+      "https://www.leyecoiv.com/2020/12/10/december-2020/\n",
+      "https://www.leyecoiv.com/2020/12/10/december-2020/\n",
+      "https://www.leyecoiv.com/2019/01/09/january-2019/\n",
+      "https://www.leyecoiv.com/2019/01/09/january-2019/\n",
+      "https://www.leyecoiv.com/2019/02/09/february-2019/\n",
+      "https://www.leyecoiv.com/2019/02/09/february-2019/\n",
+      "https://www.leyecoiv.com/2019/03/09/march-2019/\n",
+      "https://www.leyecoiv.com/2019/03/09/march-2019/\n",
+      "https://www.leyecoiv.com/2019/04/10/april-2019/\n",
+      "https://www.leyecoiv.com/2019/04/10/april-2019/\n",
+      "https://www.leyecoiv.com/2019/05/09/may-2019/\n",
+      "https://www.leyecoiv.com/2019/05/09/may-2019/\n",
+      "https://www.leyecoiv.com/2019/06/09/june-2019/\n",
+      "https://www.leyecoiv.com/2019/06/09/june-2019/\n",
+      "https://www.leyecoiv.com/2019/07/09/july-2019/\n",
+      "https://www.leyecoiv.com/2019/07/09/july-2019/\n",
+      "https://www.leyecoiv.com/2019/08/09/august-2019/\n",
+      "https://www.leyecoiv.com/2019/08/09/august-2019/\n",
+      "https://www.leyecoiv.com/2019/09/09/september-2019/\n",
+      "https://www.leyecoiv.com/2019/09/09/september-2019/\n",
+      "https://www.leyecoiv.com/2019/10/09/october-2019/\n",
+      "https://www.leyecoiv.com/2019/10/09/october-2019/\n",
+      "https://www.leyecoiv.com/2019/11/09/november-2019/\n",
+      "https://www.leyecoiv.com/2019/11/09/november-2019/\n",
+      "https://www.leyecoiv.com/2019/12/09/december-2019/\n",
+      "https://www.leyecoiv.com/2019/12/09/december-2019/\n",
+      "https://www.leyecoiv.com/2018/01/07/january-2018/\n",
+      "https://www.leyecoiv.com/2018/01/07/january-2018/\n",
+      "https://www.leyecoiv.com/2018/02/07/february-2018/\n",
+      "https://www.leyecoiv.com/2018/02/07/february-2018/\n",
+      "https://www.leyecoiv.com/2018/03/07/march-2018/\n",
+      "https://www.leyecoiv.com/2018/03/07/march-2018/\n",
+      "https://www.leyecoiv.com/2018/04/07/april-2018/\n",
+      "https://www.leyecoiv.com/2018/04/07/april-2018/\n",
+      "https://www.leyecoiv.com/2018/05/07/may-2018/\n",
+      "https://www.leyecoiv.com/2018/05/07/may-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/june-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/june-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/july-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/july-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/august-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/august-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/september-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/september-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/october-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/october-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/november-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/november-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/december-2018/\n",
+      "https://www.leyecoiv.com/2018/10/09/december-2018/\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Read the HTML content from the file\n",
+    "with open('leyeco_iv_webpage.html', 'r') as file:\n",
+    "    html_content = file.read()\n",
+    "\n",
+    "# Find all href links that match the specified format\n",
+    "pattern = r'href=[\"\\'](https://www\\.leyecoiv\\.com/\\d{4}/\\d{2}/\\d{2}/[^\"\\']*?\\d{4}/)[\"\\']'\n",
+    "links = re.findall(pattern, html_content)\n",
+    "\n",
+    "# Display the extracted links\n",
+    "for link in links:\n",
+    "    print(link)"
    ]
   },
   {
