added second table to df

--- a/MEPC/scrape_MEPC.ipynb
+++ b/MEPC/scrape_MEPC.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -335,6 +335,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>Wholesale Electricity Spot Market (WESM)</td>\n",
+       "      <td>16.51%</td>\n",
+       "      <td>8,394,227.66</td>\n",
+       "      <td>15,627,992.12</td>\n",
+       "      <td>833,614.18</td>\n",
+       "      <td>16,461,606.30</td>\n",
+       "      <td>1.9611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>Export Energy from Net Metering Customers</td>\n",
        "      <td>0.00%</td>\n",
        "      <td>-</td>\n",
@@ -344,7 +354,7 @@
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <td>Others</td>\n",
        "      <td>0.00%</td>\n",
        "      <td>-</td>\n",
@@ -354,7 +364,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -364,7 +374,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>12</th>\n",
        "      <td>TOTAL</td>\n",
        "      <td>100.00%</td>\n",
        "      <td>50,856,274.32</td>\n",
@@ -387,10 +397,11 @@
        "5                3. KEPCO SPC Power Corporation   \n",
        "6     4. Aboitiz Power Renewables, Incorporated   \n",
        "7   Subtotal - Emergency Power Supply Contracts   \n",
-       "8     Export Energy from Net Metering Customers   \n",
-       "9                                        Others   \n",
-       "10                                          NaN   \n",
-       "11                                        TOTAL   \n",
+       "8      Wholesale Electricity Spot Market (WESM)   \n",
+       "9     Export Energy from Net Metering Customers   \n",
+       "10                                       Others   \n",
+       "11                                          NaN   \n",
+       "12                                        TOTAL   \n",
        "\n",
        "                       Unnamed: 0              Unnamed: 1  \\\n",
        "0   % Share on\\rEnergy\\rPurchased  Energy\\rPurchased\\rkWh   \n",
@@ -401,10 +412,11 @@
        "5                           7.08%            3,600,000.00   \n",
        "6                           0.00%                       -   \n",
        "7                          83.49%           42,462,046.66   \n",
-       "8                           0.00%                       -   \n",
+       "8                          16.51%            8,394,227.66   \n",
        "9                           0.00%                       -   \n",
-       "10                            NaN                     NaN   \n",
-       "11                        100.00%           50,856,274.32   \n",
+       "10                          0.00%                       -   \n",
+       "11                            NaN                     NaN   \n",
+       "12                        100.00%           50,856,274.32   \n",
        "\n",
        "                     Unnamed: 2                   Unnamed: 3  \\\n",
        "0   Basic Generation\\rCost\\rPhP  Other Cost\\rAdjustment\\rPhP   \n",
@@ -415,10 +427,11 @@
        "5                 16,833,436.13                            -   \n",
        "6                             -                            -   \n",
        "7                284,590,033.08                            -   \n",
-       "8                             -                            -   \n",
+       "8                 15,627,992.12                   833,614.18   \n",
        "9                             -                            -   \n",
-       "10                          NaN                          NaN   \n",
-       "11               300,218,025.20                          NaN   \n",
+       "10                            -                            -   \n",
+       "11                          NaN                          NaN   \n",
+       "12               300,218,025.20                          NaN   \n",
        "\n",
        "                                   Unnamed: 4  \\\n",
        "0   Total Generation\\rCost for the Month\\rPhP   \n",
@@ -429,10 +442,11 @@
        "5                               16,833,436.13   \n",
        "6                                           -   \n",
        "7                              284,590,033.08   \n",
-       "8                                           -   \n",
+       "8                               16,461,606.30   \n",
        "9                                           -   \n",
-       "10                                        NaN   \n",
-       "11                             301,051,639.38   \n",
+       "10                                          -   \n",
+       "11                                        NaN   \n",
+       "12                             301,051,639.38   \n",
        "\n",
        "                           Unnamed: 5  \n",
        "0   Average\\rGeneration Rate\\rPhP/KWH  \n",
@@ -443,13 +457,14 @@
        "5                              4.6760  \n",
        "6                                   -  \n",
        "7                              6.7022  \n",
-       "8                                   -  \n",
-       "9                                 NaN  \n",
+       "8                              1.9611  \n",
+       "9                                   -  \n",
        "10                                NaN  \n",
-       "11                             5.9197  "
+       "11                                NaN  \n",
+       "12                             5.9197  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,11 +491,17 @@
     "# Extract column names from the first table\n",
     "first_table_columns = first_table.columns\n",
     "\n",
+    "# Convert the header row of the second table to a DataFrame row\n",
+    "second_table_header_as_row = pd.DataFrame([second_table.columns.tolist()], columns=second_table.columns)\n",
+    "\n",
+    "# Append the header row to the second table data\n",
+    "second_table_with_header_as_row = pd.concat([second_table_header_as_row, second_table], ignore_index=True)\n",
+    "\n",
     "# Rename columns of the second table to match the first table\n",
-    "second_table.columns = first_table_columns\n",
+    "second_table_with_header_as_row.columns = first_table_columns\n",
     "\n",
     "# Combine the first table with the modified second table\n",
-    "combined_df = pd.concat([first_table, second_table], ignore_index=True)\n",
+    "combined_df = pd.concat([first_table, second_table_with_header_as_row], ignore_index=True)\n",
     "\n",
     "combined_df"
    ]
