checked some dataframes

--- a/NEECO II/scrape_NEECO_II.ipynb
+++ b/NEECO II/scrape_NEECO_II.ipynb
@@ -146,10 +146,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -q tabula-py\n",
+    "import tabula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Set the JAVA_HOME environment variable to the Java installation directory\n",
+    "os.environ[\"JAVA_HOME\"] = \"/opt/homebrew/opt/openjdk/libexec/openjdk.jdk\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>(G)</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(F = E / A)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(D)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Generation Rate</td>\n",
+       "      <td>(H = F - G)</td>\n",
+       "      <td>(I = H / G)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(B)</td>\n",
+       "      <td>(C)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(E= C+ D)Total</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Preliminary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(A)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Other Cost/</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Based on</td>\n",
+       "      <td>Increase /</td>\n",
+       "      <td>Percent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Source</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Energy Share</td>\n",
+       "      <td>Basic Generation</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Generation Cost</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Generation</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>kWh Purchased</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adjustments</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Previous Supply</td>\n",
+       "      <td>(Decrease)</td>\n",
+       "      <td>Increase /</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(%)</td>\n",
+       "      <td>Cost (PhP)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(PhP)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(PhP)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Month</td>\n",
+       "      <td>(PhP/kWh)</td>\n",
+       "      <td>Decrease</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(PhP/kWh)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(PhP/kWh)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1. Aboitiz Power Renewable Inc.(APRI)</td>\n",
+       "      <td>28,041,585.00</td>\n",
+       "      <td>77.03%</td>\n",
+       "      <td>112,275,702.18</td>\n",
+       "      <td>(943,679.67)</td>\n",
+       "      <td>111,332,022.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.9702</td>\n",
+       "      <td>3.9626</td>\n",
+       "      <td>0.0076</td>\n",
+       "      <td>0.19%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2. WESM</td>\n",
+       "      <td>8,335,220.00</td>\n",
+       "      <td>22.90%</td>\n",
+       "      <td>62,306,842.77</td>\n",
+       "      <td>519,561.47</td>\n",
+       "      <td>62,826,404.24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.5375</td>\n",
+       "      <td>7.0925</td>\n",
+       "      <td>0.4450</td>\n",
+       "      <td>6.27%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>3. Export Energy from Net Metering Customers</td>\n",
+       "      <td>27,044.40</td>\n",
+       "      <td>0.07%</td>\n",
+       "      <td>134,267.33</td>\n",
+       "      <td>-</td>\n",
+       "      <td>134,267.33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.9647</td>\n",
+       "      <td>6.0911</td>\n",
+       "      <td>(1.1264)</td>\n",
+       "      <td>-18.49%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>TOTAL</td>\n",
+       "      <td>36,403,849.40</td>\n",
+       "      <td>100.00%</td>\n",
+       "      <td>174,716,812.28</td>\n",
+       "      <td>(424,118.20)</td>\n",
+       "      <td>174,292,694.08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.7878</td>\n",
+       "      <td>4.8647</td>\n",
+       "      <td>(0.0770)</td>\n",
+       "      <td>-1.58%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Unnamed: 0     Unnamed: 1    Unnamed: 2  \\\n",
+       "0                                            NaN            NaN           NaN   \n",
+       "1                                            NaN            NaN           NaN   \n",
+       "2                                            NaN            NaN           (B)   \n",
+       "3                                            NaN            (A)           NaN   \n",
+       "4                                         Source            NaN  Energy Share   \n",
+       "5                                            NaN  kWh Purchased           NaN   \n",
+       "6                                            NaN            NaN           (%)   \n",
+       "7                                            NaN            NaN           NaN   \n",
+       "8                                            NaN            NaN           NaN   \n",
+       "9                                            NaN            NaN           NaN   \n",
+       "10         1. Aboitiz Power Renewable Inc.(APRI)  28,041,585.00        77.03%   \n",
+       "11                                       2. WESM   8,335,220.00        22.90%   \n",
+       "12  3. Export Energy from Net Metering Customers      27,044.40         0.07%   \n",
+       "13                                         TOTAL  36,403,849.40       100.00%   \n",
+       "\n",
+       "          Unnamed: 3    Unnamed: 4       Unnamed: 5  Unnamed: 6   Unnamed: 7  \\\n",
+       "0                NaN           NaN              NaN         NaN  (F = E / A)   \n",
+       "1                NaN           (D)              NaN         NaN          NaN   \n",
+       "2                (C)           NaN   (E= C+ D)Total         NaN  Preliminary   \n",
+       "3                NaN   Other Cost/              NaN         NaN          NaN   \n",
+       "4   Basic Generation           NaN  Generation Cost         NaN   Generation   \n",
+       "5                NaN   Adjustments              NaN         NaN          NaN   \n",
+       "6         Cost (PhP)           NaN            (PhP)         NaN         Rate   \n",
+       "7                NaN         (PhP)              NaN         NaN          NaN   \n",
+       "8                NaN           NaN              NaN         NaN    (PhP/kWh)   \n",
+       "9                NaN           NaN              NaN         NaN          NaN   \n",
+       "10    112,275,702.18  (943,679.67)   111,332,022.51         NaN       3.9702   \n",
+       "11     62,306,842.77    519,561.47    62,826,404.24         NaN       7.5375   \n",
+       "12        134,267.33             -       134,267.33         NaN       4.9647   \n",
+       "13    174,716,812.28  (424,118.20)   174,292,694.08         NaN       4.7878   \n",
+       "\n",
+       "                (G)   Unnamed: 8   Unnamed: 9  \n",
+       "0               NaN          NaN          NaN  \n",
+       "1   Generation Rate  (H = F - G)  (I = H / G)  \n",
+       "2               NaN          NaN          NaN  \n",
+       "3          Based on   Increase /      Percent  \n",
+       "4               NaN          NaN          NaN  \n",
+       "5   Previous Supply   (Decrease)   Increase /  \n",
+       "6               NaN          NaN          NaN  \n",
+       "7             Month    (PhP/kWh)     Decrease  \n",
+       "8               NaN          NaN          NaN  \n",
+       "9         (PhP/kWh)          NaN          NaN  \n",
+       "10           3.9626       0.0076        0.19%  \n",
+       "11           7.0925       0.4450        6.27%  \n",
+       "12           6.0911     (1.1264)      -18.49%  \n",
+       "13           4.8647     (0.0770)       -1.58%  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = tabula.read_pdf(\"pdf downloads/08%20L.-Generation-Rate-of-the-Current-Supply-Bill_August-2024.pdf\", stream = True, pages = 1)[0]\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
